--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,15 +1,27 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
     tools:context="com.example.jeff.move4kassa.HomeActivity"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    android:orientation="horizontal"
+    android:weightSum="1">
+
     <GridView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/gridView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
+        android:visibility="visible"
+        android:horizontalSpacing="1dp"
         android:numColumns="8"
-         />
-</RelativeLayout>
+        android:columnWidth="155dp"
+        android:stretchMode="none"
+        android:background="@android:drawable/screen_background_dark_transparent" />
+
+    <FrameLayout
+        android:layout_width="340dp"
+        android:layout_height="match_parent"
+        android:id="@+id/infoLayout"
+        android:layout_gravity="end">
+        </FrameLayout>
+</FrameLayout>
