images from server! ,                                     -loading in the splash screen                                     -  server calls for active users                                  -  side screen on push!                                  - fancy animations                                  - resizing                                  - textviews                                  - added image to info                                  - added animations                                  - added listview of likes

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
     tools:context="com.example.jeff.move4kassa.HomeActivity"
-    android:background="@android:color/white"
+    android:background="#ff585858"
     android:orientation="horizontal"
     android:weightSum="1">
 
@@ -16,7 +16,7 @@
         android:numColumns="8"
         android:columnWidth="155dp"
         android:stretchMode="none"
-        android:background="@android:drawable/screen_background_dark_transparent" />
+        android:background="#ff585858" />
 
     <FrameLayout
         android:layout_width="340dp"
