--- a/app/src/main/res/layout/fragment_person_info.xml
+++ b/app/src/main/res/layout/fragment_person_info.xml
@@ -1,18 +1,36 @@
 <LinearLayout
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:weightSum="1"
     android:background="#ff434343">
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="close"
-        android:id="@+id/button"
-        android:textColor="@android:color/white" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/button"
+            android:textColor="@android:color/white"
+            android:background="@drawable/close" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Personal info"
+            android:id="@+id/textView"
+            android:textColor="@android:color/white"
+            android:layout_gravity="center"
+            android:layout_marginLeft="65dp"
+            android:textStyle="bold|italic" />
+
+    </LinearLayout>
 
     <ImageView
         android:layout_width="206dp"
@@ -45,28 +63,23 @@
                     android:id="@+id/t_Naamlabel"
                     android:textSize="20dp"
                     android:textColor="@android:color/white"
-                    android:layout_marginRight="20dp" />
+                    android:layout_marginRight="20dp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="firstname"
-                    android:id="@+id/t_Firstname"
+                    android:id="@+id/t_name"
                     android:textSize="20dp"
                     android:textIsSelectable="false"
                     android:textColor="@android:color/white"
-                    android:layout_marginRight="10dp" />
+                    android:layout_marginRight="10dp"
+                    android:maxLines="2"
+                    android:maxWidth="200dp"
+                    android:linksClickable="false" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="lastname"
-                    android:id="@+id/t_Lastname"
-                    android:layout_weight="0"
-                    android:textColor="@android:color/white"
-                    android:textSize="20dp" />
             </TableRow>
 
             <TableRow
@@ -82,7 +95,8 @@
                     android:id="@+id/t_Maillabel"
                     android:textSize="20dp"
                     android:textColor="@android:color/white"
-                    android:layout_marginRight="20dp" />
+                    android:layout_marginRight="20dp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -107,12 +121,24 @@
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Likes"
+        android:id="@+id/t_likes"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:textStyle="italic"
+        android:layout_marginTop="25dp"
+        android:background="#ff373737" />
+
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="600dp"
         android:id="@+id/l_likes"
-        android:layout_gravity="top|center"
         android:headerDividersEnabled="true"
-        android:layout_marginTop="25dp" />
+        android:layout_marginTop="0dp" />
 
 </LinearLayout>
